--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<!-- nothing here -->
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta https-equiv="X-UA-Compatible" content="IE-edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
+    <title>Pluralsight Skills</title>
+  </head>
+  <body>
+    <h1>Pluralsight Skills</h1>
+    <h2>
+      Where teams build better <br />
+      technology skills, faster
+    </h2>
+    <p>
+      Technology teams are only as successful as their skills are relevant.
+      <br />Give them access to Pluralsight Skills—courses, assessments,
+      learning paths, and labs <br />and you give them the tech fluency they
+      need to build business-critical skills.
+    </p>
+    <img src="./images/team.png" alt="team" />
+    <p>
+      <button>Try for free</button>
+    </p>
+  </body>
+</html>
